--- a/youtube/eun-seong/index.ipynb
+++ b/youtube/eun-seong/index.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -127,81 +127,81 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>70</td>\n",
-       "      <td>라이온 킹</td>\n",
-       "      <td>라이온 킹 리뷰</td>\n",
-       "      <td>oHPOS8HQWgE</td>\n",
-       "      <td>(문화산책-관람후기) 뮤지컬 라이온킹(ft. 뭐 이렇게 재밌는게 다 있어!! - 라...</td>\n",
-       "      <td>2019-01-29T05:55:38Z</td>\n",
+       "      <td>187</td>\n",
+       "      <td>나쁜 녀석들: 더 무비</td>\n",
+       "      <td>나쁜 녀석들: 더 무비 명장면</td>\n",
+       "      <td>8qROF7VtUQE</td>\n",
+       "      <td>[#뭅뭅픽] 누군가는 겪었을 이야기, 국제시장 속 명장면 명대사 모음</td>\n",
+       "      <td>2019-09-13T01:00:02Z</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>71</td>\n",
-       "      <td>라이온 킹</td>\n",
-       "      <td>라이온 킹 리뷰</td>\n",
-       "      <td>8PVL8IGDKGs</td>\n",
-       "      <td>VLOG | 뮤지컬 ‘라이온킹’ 보고온 브이로그🦁 #라이온킹 #관람후기 #관람꿀팁 ...</td>\n",
-       "      <td>2019-02-05T06:28:08Z</td>\n",
+       "      <td>188</td>\n",
+       "      <td>나쁜 녀석들: 더 무비</td>\n",
+       "      <td>나쁜 녀석들: 더 무비 명장면</td>\n",
+       "      <td>6yzjoR91LKQ</td>\n",
+       "      <td>[나쁜녀석들] 형한테 혼나볼래? 美친개의 시작 마동석X김상중 레전드 하이라이트 모음...</td>\n",
+       "      <td>2019-09-11T01:00:00Z</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>72</td>\n",
-       "      <td>라이온 킹</td>\n",
-       "      <td>라이온 킹 해석</td>\n",
-       "      <td>H4Yy1f1YFQ0</td>\n",
-       "      <td>라이온킹 OST 악보 Can You Feel the Love Tonight ? 피아...</td>\n",
-       "      <td>2019-02-06T04:58:44Z</td>\n",
+       "      <td>189</td>\n",
+       "      <td>나쁜 녀석들: 더 무비</td>\n",
+       "      <td>나쁜 녀석들: 더 무비 명장면</td>\n",
+       "      <td>rUXS2LuArpI</td>\n",
+       "      <td>나쁜 녀석들 : 더 무비 _ 🍺영화 리뷰</td>\n",
+       "      <td>2019-09-12T03:30:13Z</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>73</td>\n",
-       "      <td>라이온 킹</td>\n",
-       "      <td>라이온 킹 해석</td>\n",
-       "      <td>edsvzNKsv6o</td>\n",
-       "      <td>(자막번역) 뮤지컬 라이온킹 결정적 순간!! 심바를 설득하는 라피키의 노래 &amp;quo...</td>\n",
-       "      <td>2019-02-06T10:10:35Z</td>\n",
+       "      <td>190</td>\n",
+       "      <td>나쁜 녀석들: 더 무비</td>\n",
+       "      <td>나쁜 녀석들: 더 무비 명장면</td>\n",
+       "      <td>i9zAyewGwlE</td>\n",
+       "      <td>[나쁜 녀석들: 더 무비] &amp;#39;4인 4색 액션&amp;#39; 영상</td>\n",
+       "      <td>2019-09-16T09:56:15Z</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>74</td>\n",
-       "      <td>라이온 킹</td>\n",
-       "      <td>라이온 킹 명장면</td>\n",
-       "      <td>9vrdzDDGoyk</td>\n",
-       "      <td>[라이온 킹] 디즈니 만화영화 라이온 킹 by 스케차일드</td>\n",
-       "      <td>2019-02-15T10:00:40Z</td>\n",
+       "      <td>191</td>\n",
+       "      <td>나쁜 녀석들: 더 무비</td>\n",
+       "      <td>나쁜 녀석들: 더 무비 명장면</td>\n",
+       "      <td>__l6gvOgivI</td>\n",
+       "      <td>와~ 너네 진짜 나쁜 녀석들이구나?^-^/ - 나쁜녀석들: 더 무비 리뷰 [영화 공장]</td>\n",
+       "      <td>2019-09-28T12:00:12Z</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>75 rows × 5 columns</p>\n",
+       "<p>192 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "    영화 제목     검색 키워드        영상 id  \\\n",
-       "0    극한직업    극한직업 영화  YcMZZ3sjfxk   \n",
-       "1    극한직업    극한직업 영화  7DRDMuMdxVY   \n",
-       "2    극한직업    극한직업 영화  8iQg4napg90   \n",
-       "3    극한직업    극한직업 영화  jFd1X9j_9Os   \n",
-       "4    극한직업    극한직업 영화  -iHkdgvLBlY   \n",
-       "..    ...        ...          ...   \n",
-       "70  라이온 킹   라이온 킹 리뷰  oHPOS8HQWgE   \n",
-       "71  라이온 킹   라이온 킹 리뷰  8PVL8IGDKGs   \n",
-       "72  라이온 킹   라이온 킹 해석  H4Yy1f1YFQ0   \n",
-       "73  라이온 킹   라이온 킹 해석  edsvzNKsv6o   \n",
-       "74  라이온 킹  라이온 킹 명장면  9vrdzDDGoyk   \n",
+       "            영화 제목            검색 키워드        영상 id  \\\n",
+       "0            극한직업           극한직업 영화  YcMZZ3sjfxk   \n",
+       "1            극한직업           극한직업 영화  7DRDMuMdxVY   \n",
+       "2            극한직업           극한직업 영화  8iQg4napg90   \n",
+       "3            극한직업           극한직업 영화  jFd1X9j_9Os   \n",
+       "4            극한직업           극한직업 영화  -iHkdgvLBlY   \n",
+       "..            ...               ...          ...   \n",
+       "187  나쁜 녀석들: 더 무비  나쁜 녀석들: 더 무비 명장면  8qROF7VtUQE   \n",
+       "188  나쁜 녀석들: 더 무비  나쁜 녀석들: 더 무비 명장면  6yzjoR91LKQ   \n",
+       "189  나쁜 녀석들: 더 무비  나쁜 녀석들: 더 무비 명장면  rUXS2LuArpI   \n",
+       "190  나쁜 녀석들: 더 무비  나쁜 녀석들: 더 무비 명장면  i9zAyewGwlE   \n",
+       "191  나쁜 녀석들: 더 무비  나쁜 녀석들: 더 무비 명장면  __l6gvOgivI   \n",
        "\n",
-       "                                                영상 제목                생성된 날짜  \n",
-       "0                           극한직업, 닭으로 닥치고 천만 찍어버릴 영화!  2019-02-02T01:01:58Z  \n",
-       "1                             극한직업 수원왕갈비통닭을 먹었습니다.맛상무  2019-02-10T05:45:02Z  \n",
-       "2                   영화 &quot;극한직업&quot;의  촬영 비하인드 스토리  2019-02-03T05:19:01Z  \n",
-       "3             명절 개봉영화의 역사를 새로쓰는 영화 : &#39;극한직업&#39;리뷰  2019-01-31T13:02:53Z  \n",
-       "4     웃다 지린다고 소문난 극한직업 보고 만든 웃긴 영화 볼 때 갑분싸 유형ㅋㅋㅋㅋㅋㅋㅋㅋ  2019-01-25T08:46:13Z  \n",
-       "..                                                ...                   ...  \n",
-       "70  (문화산책-관람후기) 뮤지컬 라이온킹(ft. 뭐 이렇게 재밌는게 다 있어!! - 라...  2019-01-29T05:55:38Z  \n",
-       "71  VLOG | 뮤지컬 ‘라이온킹’ 보고온 브이로그🦁 #라이온킹 #관람후기 #관람꿀팁 ...  2019-02-05T06:28:08Z  \n",
-       "72  라이온킹 OST 악보 Can You Feel the Love Tonight ? 피아...  2019-02-06T04:58:44Z  \n",
-       "73  (자막번역) 뮤지컬 라이온킹 결정적 순간!! 심바를 설득하는 라피키의 노래 &quo...  2019-02-06T10:10:35Z  \n",
-       "74                    [라이온 킹] 디즈니 만화영화 라이온 킹 by 스케차일드  2019-02-15T10:00:40Z  \n",
+       "                                                 영상 제목                생성된 날짜  \n",
+       "0                            극한직업, 닭으로 닥치고 천만 찍어버릴 영화!  2019-02-02T01:01:58Z  \n",
+       "1                              극한직업 수원왕갈비통닭을 먹었습니다.맛상무  2019-02-10T05:45:02Z  \n",
+       "2                    영화 &quot;극한직업&quot;의  촬영 비하인드 스토리  2019-02-03T05:19:01Z  \n",
+       "3              명절 개봉영화의 역사를 새로쓰는 영화 : &#39;극한직업&#39;리뷰  2019-01-31T13:02:53Z  \n",
+       "4      웃다 지린다고 소문난 극한직업 보고 만든 웃긴 영화 볼 때 갑분싸 유형ㅋㅋㅋㅋㅋㅋㅋㅋ  2019-01-25T08:46:13Z  \n",
+       "..                                                 ...                   ...  \n",
+       "187             [#뭅뭅픽] 누군가는 겪었을 이야기, 국제시장 속 명장면 명대사 모음  2019-09-13T01:00:02Z  \n",
+       "188  [나쁜녀석들] 형한테 혼나볼래? 美친개의 시작 마동석X김상중 레전드 하이라이트 모음...  2019-09-11T01:00:00Z  \n",
+       "189                             나쁜 녀석들 : 더 무비 _ 🍺영화 리뷰  2019-09-12T03:30:13Z  \n",
+       "190               [나쁜 녀석들: 더 무비] &#39;4인 4색 액션&#39; 영상  2019-09-16T09:56:15Z  \n",
+       "191   와~ 너네 진짜 나쁜 녀석들이구나?^-^/ - 나쁜녀석들: 더 무비 리뷰 [영화 공장]  2019-09-28T12:00:12Z  \n",
        "\n",
-       "[75 rows x 5 columns]"
+       "[192 rows x 5 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +212,7 @@
     "\n",
     "for movieName in movieNames[:9]:\n",
     "  for keyword in searchKeywords:\n",
-    "    publishedAfter = list(movieInfo[movieInfo['영화명'] == '극한직업'].loc[:, '개봉일'])[0]\n",
+    "    publishedAfter = list(movieInfo[movieInfo['영화명'] == movieName].loc[:, '개봉일'])[0]\n",
     "    year, month, day = publishedAfter.split('-')\n",
     "    publishedBefore = (datetime.datetime(int(year), int(month), int(day)) + datetime.timedelta(days=30)).strftime('%Y-%m-%d')\n",
     "    q = ' '.join([movieName, keyword])\n",
@@ -236,54 +236,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "res_data.to_csv('./movieVideoList.csv')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
