파일 이어 붙이기

--- a/youtube/eun-seong/index.ipynb
+++ b/youtube/eun-seong/index.ipynb
@@ -480,6 +480,54 @@
     "  encoding='utf-8-sig'\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 파일 이어 붙이기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import glob\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['./filteredVideoList/movieVideoList_12_25.csv', './filteredVideoList/movieVideoList_0_11.csv', './filteredVideoList/movieVideoList_26_64.csv']\n"
+     ]
+    }
+   ],
+   "source": [
+    "filenames = glob.glob('./filteredVideoList/*.csv')\n",
+    "print(filenames)\n",
+    "\n",
+    "df_list = (pd.read_csv(f) for f in filenames)\n",
+    "concated_list = pd.concat(df_list, ignore_index=True)\n",
+    "concated_list = concated_list.drop(columns=['영화 제목.1'], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "concated_list.to_csv('./videoList_0_64.csv', encoding='utf-8-sig')"
+   ]
   }
  ],
  "metadata": {
