남은 영화만 export

--- a/youtube/eun-seong/index.ipynb
+++ b/youtube/eun-seong/index.ipynb
@@ -483,6 +483,222 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>영화 제목</th>\n",
+       "      <th>영상 id</th>\n",
+       "      <th>검색 키워드</th>\n",
+       "      <th>영상 제목</th>\n",
+       "      <th>조회수</th>\n",
+       "      <th>좋아요수</th>\n",
+       "      <th>댓글 수</th>\n",
+       "      <th>생성된 날짜</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>검객</td>\n",
+       "      <td>D3oecFZmPnM</td>\n",
+       "      <td>검객 영화</td>\n",
+       "      <td>역대 최고 중 하나가 된 무협 영화, 진시황의 앞에 섰던 검객의 이야기 [영화리뷰]</td>\n",
+       "      <td>850379</td>\n",
+       "      <td>5064</td>\n",
+       "      <td>744</td>\n",
+       "      <td>2020-09-25T07:21:37Z</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>검객</td>\n",
+       "      <td>mQxVJZvflBs</td>\n",
+       "      <td>검객 영화</td>\n",
+       "      <td>맹인 지팡이 속 숨겨진 칼날의 비밀, 검객 자토이치의 정체 [영화리뷰/결말포함]</td>\n",
+       "      <td>684936</td>\n",
+       "      <td>5002</td>\n",
+       "      <td>1025</td>\n",
+       "      <td>2020-10-03T07:51:07Z</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>검객</td>\n",
+       "      <td>3pFteU56o5w</td>\n",
+       "      <td>검객 영화</td>\n",
+       "      <td>아이를 업은 채 적들을 쓸어버리는 몰락한 가문 최강의 검객! [영화리뷰/결말포함]</td>\n",
+       "      <td>306156</td>\n",
+       "      <td>2776</td>\n",
+       "      <td>241</td>\n",
+       "      <td>2020-10-11T12:06:41Z</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>검객</td>\n",
+       "      <td>oE9arnb-krE</td>\n",
+       "      <td>검객 영화</td>\n",
+       "      <td>신민아와 장혁이 각각 다른 영화로 돌아왔다: 디바 &amp;amp; 검객 미리 보고 온 후기</td>\n",
+       "      <td>32575</td>\n",
+       "      <td>599</td>\n",
+       "      <td>104</td>\n",
+       "      <td>2020-09-23T08:00:12Z</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>검객</td>\n",
+       "      <td>dBU9XjCn1_0</td>\n",
+       "      <td>검객 영화</td>\n",
+       "      <td>검객 THE SWORDSMAN on＜KBS2 &amp;#39;영화가좋다 I love mov...</td>\n",
+       "      <td>27614</td>\n",
+       "      <td>149</td>\n",
+       "      <td>22</td>\n",
+       "      <td>2020-10-03T02:33:33Z</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>295</td>\n",
+       "      <td>프리즌 이스케이프</td>\n",
+       "      <td>xt5v39dwmYQ</td>\n",
+       "      <td>프리즌 이스케이프 영화</td>\n",
+       "      <td>[영화랑] 70년 남아공 실화 탈옥 스릴러 &amp;#39;프리즌 이스케이프&amp;#39; 역주...</td>\n",
+       "      <td>1429</td>\n",
+       "      <td>13</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2020-05-21T01:23:44Z</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>296</td>\n",
+       "      <td>프리즌 이스케이프</td>\n",
+       "      <td>p0bcqMnEwUM</td>\n",
+       "      <td>프리즌 이스케이프 영화</td>\n",
+       "      <td>[프리즌 이스케이프] 다니엘 래드클리프 인터뷰 영상</td>\n",
+       "      <td>1316</td>\n",
+       "      <td>19</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2020-05-15T02:43:07Z</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>297</td>\n",
+       "      <td>프리즌 이스케이프</td>\n",
+       "      <td>6RRUJ8XjE4E</td>\n",
+       "      <td>프리즌 이스케이프 영화</td>\n",
+       "      <td>[특별 예고편] 프리즌 이스케이프 #3 탈출</td>\n",
+       "      <td>864</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2020-05-08T09:01:56Z</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>298</td>\n",
+       "      <td>프리즌 이스케이프</td>\n",
+       "      <td>JTWRNu_fUjE</td>\n",
+       "      <td>프리즌 이스케이프 영화</td>\n",
+       "      <td>열쇠로만 스릴을 유도하는 쾌감실화! / 프리즌 이스케이프 리뷰</td>\n",
+       "      <td>775</td>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2020-05-08T10:39:33Z</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>299</td>\n",
+       "      <td>프리즌 이스케이프</td>\n",
+       "      <td>TGQPx2lL9uY</td>\n",
+       "      <td>프리즌 이스케이프 영화</td>\n",
+       "      <td>[씬의 한수]코로나19로 답답하다면…영화 속 모험에 동행하라 | 뉴스A LIVE</td>\n",
+       "      <td>756</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2020-05-22T03:24:56Z</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>300 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         영화 제목        영상 id        검색 키워드  \\\n",
+       "0           검객  D3oecFZmPnM         검객 영화   \n",
+       "1           검객  mQxVJZvflBs         검객 영화   \n",
+       "2           검객  3pFteU56o5w         검객 영화   \n",
+       "3           검객  oE9arnb-krE         검객 영화   \n",
+       "4           검객  dBU9XjCn1_0         검객 영화   \n",
+       "..         ...          ...           ...   \n",
+       "295  프리즌 이스케이프  xt5v39dwmYQ  프리즌 이스케이프 영화   \n",
+       "296  프리즌 이스케이프  p0bcqMnEwUM  프리즌 이스케이프 영화   \n",
+       "297  프리즌 이스케이프  6RRUJ8XjE4E  프리즌 이스케이프 영화   \n",
+       "298  프리즌 이스케이프  JTWRNu_fUjE  프리즌 이스케이프 영화   \n",
+       "299  프리즌 이스케이프  TGQPx2lL9uY  프리즌 이스케이프 영화   \n",
+       "\n",
+       "                                                 영상 제목     조회수  좋아요수  댓글 수  \\\n",
+       "0       역대 최고 중 하나가 된 무협 영화, 진시황의 앞에 섰던 검객의 이야기 [영화리뷰]  850379  5064   744   \n",
+       "1         맹인 지팡이 속 숨겨진 칼날의 비밀, 검객 자토이치의 정체 [영화리뷰/결말포함]  684936  5002  1025   \n",
+       "2        아이를 업은 채 적들을 쓸어버리는 몰락한 가문 최강의 검객! [영화리뷰/결말포함]  306156  2776   241   \n",
+       "3      신민아와 장혁이 각각 다른 영화로 돌아왔다: 디바 &amp; 검객 미리 보고 온 후기   32575   599   104   \n",
+       "4    검객 THE SWORDSMAN on＜KBS2 &#39;영화가좋다 I love mov...   27614   149    22   \n",
+       "..                                                 ...     ...   ...   ...   \n",
+       "295  [영화랑] 70년 남아공 실화 탈옥 스릴러 &#39;프리즌 이스케이프&#39; 역주...    1429    13     0   \n",
+       "296                       [프리즌 이스케이프] 다니엘 래드클리프 인터뷰 영상    1316    19     1   \n",
+       "297                           [특별 예고편] 프리즌 이스케이프 #3 탈출     864     4     0   \n",
+       "298                 열쇠로만 스릴을 유도하는 쾌감실화! / 프리즌 이스케이프 리뷰     775     8     8   \n",
+       "299       [씬의 한수]코로나19로 답답하다면…영화 속 모험에 동행하라 | 뉴스A LIVE     756     7     0   \n",
+       "\n",
+       "                   생성된 날짜  \n",
+       "0    2020-09-25T07:21:37Z  \n",
+       "1    2020-10-03T07:51:07Z  \n",
+       "2    2020-10-11T12:06:41Z  \n",
+       "3    2020-09-23T08:00:12Z  \n",
+       "4    2020-10-03T02:33:33Z  \n",
+       "..                    ...  \n",
+       "295  2020-05-21T01:23:44Z  \n",
+       "296  2020-05-15T02:43:07Z  \n",
+       "297  2020-05-08T09:01:56Z  \n",
+       "298  2020-05-08T10:39:33Z  \n",
+       "299  2020-05-22T03:24:56Z  \n",
+       "\n",
+       "[300 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lastVideoList = pd.read_csv('./filteredVideoList/movieVideoList_65_94.csv').drop(columns=['영화 제목.1'], axis=1)\n",
+    "lastVideoList.to_csv('./videoList_final.csv', encoding='utf-8-sig')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
    "outputs": [],
