영화명 매칭으로 수정

--- a/sentiment/eun-seong/index.ipynb
+++ b/sentiment/eun-seong/index.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,119 +14,202 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>movie_name</th>\n",
+       "      <th>rename</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>극한직업</td>\n",
+       "      <td>극한직업</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>어벤져스: 엔드게임</td>\n",
+       "      <td>어벤져스 엔드게임</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>겨울왕국 2</td>\n",
+       "      <td>겨울왕국 2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>알라딘</td>\n",
+       "      <td>알라딘</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>기생충</td>\n",
+       "      <td>기생충</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>89</td>\n",
+       "      <td>프리즌 이스케이프</td>\n",
+       "      <td>프리즌 이스케이프</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>90</td>\n",
+       "      <td>검객</td>\n",
+       "      <td>검객</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>91</td>\n",
+       "      <td>조제</td>\n",
+       "      <td>조제</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>92</td>\n",
+       "      <td>사라진 시간</td>\n",
+       "      <td>사라진 시간</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>93</td>\n",
+       "      <td>밤쉘: 세상을 바꾼 폭탄선언</td>\n",
+       "      <td>밤쉘 세상을 바꾼 폭탄선언</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>94 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         movie_name          rename\n",
+       "0              극한직업            극한직업\n",
+       "1        어벤져스: 엔드게임       어벤져스 엔드게임\n",
+       "2            겨울왕국 2          겨울왕국 2\n",
+       "3               알라딘             알라딘\n",
+       "4               기생충             기생충\n",
+       "..              ...             ...\n",
+       "89        프리즌 이스케이프       프리즌 이스케이프\n",
+       "90               검객              검객\n",
+       "91               조제              조제\n",
+       "92           사라진 시간          사라진 시간\n",
+       "93  밤쉘: 세상을 바꾼 폭탄선언  밤쉘 세상을 바꾼 폭탄선언\n",
+       "\n",
+       "[94 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movie_name_df = pd.read_excel('../../../Analysis/movie_dataframe.xlsx').loc[:,['movie_name']]\n",
+    "movie_edited_name_list = [name.replace(':','').replace('&','_') for name in list(movie_name_df['movie_name'])]\n",
+    "movie_name_df['rename'] = movie_edited_name_list\n",
+    "movie_name_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>movie_name</th>\n",
+       "      <th>rename</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>14</td>\n",
+       "      <td>분노의 질주: 홉스&amp;쇼</td>\n",
+       "      <td>분노의 질주 홉스_쇼</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      movie_name       rename\n",
+       "14  분노의 질주: 홉스&쇼  분노의 질주 홉스_쇼"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movie_name_df[movie_name_df['rename'].str.contains('분노의 질주')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['../../sentiment_analysis_files/score_youtube_comments_오! 문희.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_존 윅 3 파라벨룸.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_다만 악에서 구하소서.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_유열의 음악앨범.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_히트맨.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_침입자.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_해치지않아.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_스타워즈 라이즈 오브 스카이워커.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_악인전.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_타짜 원 아이드 잭.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_내안의 그놈.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_담보.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_말모이.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_버즈 오브 프레이(할리 퀸의 황홀한 해방).csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_신의 한 수 귀수편.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_롱 리브 더 킹 목포 영웅.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_알라딘.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_도굴.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_아쿠아맨.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_스파이더맨 파 프롬 홈.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_스파이 지니어스.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_조커.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_알리타 배틀 엔젤.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_분노의 질주 홉스_쇼.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_강철비2 정상회담.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_미드웨이.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_터미네이터 다크 페이트.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_닥터 두리틀.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_소리도 없이.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_오케이 마담.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_위대한 쇼맨.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_항거유관순 이야기.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_결백.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_사바하.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_#살아있다.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_포드 V 페라리.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_삼진그룹 영어토익반.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_증인.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_밤쉘 세상을 바꾼 폭탄선언.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_클로젯.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_기생충.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_반도.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_가장 보통의 연애.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_인비저블맨.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_뺑반.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_조제.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_천문 하늘에 묻는다.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_신비아파트 극장판 하늘도깨비 대 요르문간드.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_말레피센트 2.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_미스터 주 사라진 VIP.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_작은 아씨들.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_뮬란.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_국제수사.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_라이온 킹.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_어벤져스 엔드게임.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_토이 스토리 4.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_변신.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_퍼펙트맨.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_마이펫의 이중생활 2.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_주먹왕 랄프 2 인터넷 속으로.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_나쁜 녀석들 포에버.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_캡틴 마블.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_그린랜드.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_온워드 단 하루의 기적.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_생일.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_백두산.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_나쁜 녀석들 더 무비.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_검객.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_정직한 후보.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_힘을 내요, 미스터 리.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_블랙머니.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_봉오동 전투.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_82년생 김지영.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_나의 특별한 형제.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_이웃사촌.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_돈.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_원더 우먼 1984.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_극한직업.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_테넷.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_장사리  잊혀진 영웅들.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_쥬만지 넥스트 레벨.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_어스.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_지푸라기라도 잡고 싶은 짐승들.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_남산의 부장들.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_사라진 시간.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_드래곤 길들이기 3.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_걸캅스.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_시동.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_겨울왕국 2.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_내가 죽던 날.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_사자.csv',\n",
-       " '../../sentiment_analysis_files/score_youtube_comments_1917.csv']"
+       "92"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "file_list = glob.glob('../sentiment_analysis_files/*')\n",
-    "file_list"
+    "len(file_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,18 +220,20 @@
     "  df_comments = pd.read_csv(file)\n",
     "\n",
     "  movie_name = re.match(r'^.*sentiment\\_analysis\\_files\\/score\\_youtube\\_comments\\_(.*).csv$', file).group(1)\n",
+    "  match_name = list(movie_name_df[movie_name_df['rename'] == movie_name].loc[:, 'movie_name'])[0]\n",
+    "  \n",
     "  mean_score = np.mean(df_comments['score'])\n",
     "  sqr_mean_score = np.mean(df_comments['score']**2)\n",
     "  abs_mean_score = np.mean(np.abs(df_comments['score']))\n",
     "\n",
-    "  new_row = [[movie_name, mean_score, sqr_mean_score, abs_mean_score]]\n",
+    "  new_row = [[match_name, mean_score, sqr_mean_score, abs_mean_score]]\n",
     "\n",
     "  result = result.append(pd.DataFrame(new_row, columns=columns), ignore_index=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
