누락된 파일 score 추출

--- a/sentiment/eun-seong/index.ipynb
+++ b/sentiment/eun-seong/index.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
        "[94 rows x 2 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
        "14  분노의 질주: 홉스&쇼  분노의 질주 홉스_쇼"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,16 +188,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "92"
+       "94"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,19 +233,153 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>영화명</th>\n",
+       "      <th>mean_score</th>\n",
+       "      <th>sqr_mean_score</th>\n",
+       "      <th>abs_mean_score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>오! 문희</td>\n",
+       "      <td>-2.230928</td>\n",
+       "      <td>37.314920</td>\n",
+       "      <td>2.965916</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>존 윅 3: 파라벨룸</td>\n",
+       "      <td>1.820909</td>\n",
+       "      <td>15.391047</td>\n",
+       "      <td>2.221334</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>다만 악에서 구하소서</td>\n",
+       "      <td>-0.270074</td>\n",
+       "      <td>7.747352</td>\n",
+       "      <td>1.559253</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>유열의 음악앨범</td>\n",
+       "      <td>0.789876</td>\n",
+       "      <td>11.530897</td>\n",
+       "      <td>1.990418</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>히트맨</td>\n",
+       "      <td>-1.777042</td>\n",
+       "      <td>25.830823</td>\n",
+       "      <td>2.772913</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>89</td>\n",
+       "      <td>겨울왕국 2</td>\n",
+       "      <td>-0.396436</td>\n",
+       "      <td>6.719689</td>\n",
+       "      <td>1.154460</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>90</td>\n",
+       "      <td>내가 죽던 날</td>\n",
+       "      <td>-1.346305</td>\n",
+       "      <td>29.334197</td>\n",
+       "      <td>3.173486</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>91</td>\n",
+       "      <td>사자</td>\n",
+       "      <td>0.925919</td>\n",
+       "      <td>7.880573</td>\n",
+       "      <td>1.680488</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>92</td>\n",
+       "      <td>1917</td>\n",
+       "      <td>1.054631</td>\n",
+       "      <td>12.521840</td>\n",
+       "      <td>2.188710</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>93</td>\n",
+       "      <td>프리즌 이스케이프</td>\n",
+       "      <td>0.201935</td>\n",
+       "      <td>2.308607</td>\n",
+       "      <td>0.791509</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>94 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            영화명  mean_score  sqr_mean_score  abs_mean_score\n",
+       "0         오! 문희   -2.230928       37.314920        2.965916\n",
+       "1   존 윅 3: 파라벨룸    1.820909       15.391047        2.221334\n",
+       "2   다만 악에서 구하소서   -0.270074        7.747352        1.559253\n",
+       "3      유열의 음악앨범    0.789876       11.530897        1.990418\n",
+       "4           히트맨   -1.777042       25.830823        2.772913\n",
+       "..          ...         ...             ...             ...\n",
+       "89       겨울왕국 2   -0.396436        6.719689        1.154460\n",
+       "90      내가 죽던 날   -1.346305       29.334197        3.173486\n",
+       "91           사자    0.925919        7.880573        1.680488\n",
+       "92         1917    1.054631       12.521840        2.188710\n",
+       "93    프리즌 이스케이프    0.201935        2.308607        0.791509\n",
+       "\n",
+       "[94 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
     "result.to_csv('state_score.csv', encoding='utf-8-sig')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
